[package]
name = "alloy-merkle-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tracing = "0.1.41"

# alloy
alloy-consensus = "0.11.1"
alloy-primitives = { version = "0.8.21", features = ["serde"] }
alloy-rpc-types-eth = "0.11.1"

[dev-dependencies]
eyre = "0.6.12"
futures-util = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
